syntax = "proto3";

import "proc/proc.proto";

option go_package = "sigmaos/sched/msched/proto";

message ForceRunReq {
  ProcProto procProto = 1;
  bool memAccountedFor = 2;
}

message ForceRunRep {
}

message WaitReq {
  string pidStr = 1;
  ProcSeqno procSeqno = 2;
}

message WaitRep {
  bytes status = 1;
}

message NotifyReq {
  string pidStr = 1;
  bytes status = 2;
}

message NotifyRep {
}

message GetCPUSharesReq {
}

message GetCPUSharesRep {
  map<string, int64> shares = 1;
}

message GetCPUUtilReq {
  string realmStr = 1;
}

message GetCPUUtilRep {
  double util = 1;
}

message GetRunningProcsReq {
}

message GetRunningProcsRep {
  repeated ProcProto procProtos = 1;
}

message WarmCacheBinReq {
  string pidStr = 1;
  string realmStr = 2;
  string program = 3;
  repeated string SigmaPath = 4;
  int32 procType = 5;
}

message WarmCacheBinRep {
  bool oK = 1;
}

message RealmStats {
  int64 running = 1;
  int64 totalRan = 2; 
}

message GetMSchedStatsReq {
}

message GetMSchedStatsRep {
  map<string, RealmStats> mSchedStats = 1;
}
